Hero fixes and body class
Added a class to the body block that was needed for spacing
Updated the page regions to have missing classes and fixed class names
Updated hero css to work outside properly in the wide regions.

--- a/css/block/hero-unit.css
+++ b/css/block/hero-unit.css
@@ -26,6 +26,13 @@
   font-size: 120%;
 }
 
+.ucb-post-wide-title-region .block:first-child.block-hero-unit, .ucb-below-post-wide-region .block:first-child.block-hero-unit {
+  padding-top: 0;
+  padding-bottom: 0;
+  width: 100%;
+  margin: 0;
+}
+
 .ucb-boostrap-layout-section .column .block:first-child.block-hero-unit {
   padding-top: 0;
   padding-bottom: 0;
@@ -41,6 +48,16 @@
 .block-hero-unit.size-small .ucb-hero-unit-content {
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.ucb-post-wide-title-region .block.ucb-overlay-dark, .ucb-below-post-wide-region .block.ucb-overlay-dark {
+  background-color: rgba(20, 20, 20, 0.5);
+  background-blend-mode: overlay;
+}
+
+.ucb-post-wide-title-region .block.ucb-overlay-light, .ucb-below-post-wide-region .block.ucb-overlay-light {
+  background-color: rgba(200, 200, 200, 0.7);
+  background-blend-mode: overlay;
 }
 
 .ucb-boostrap-layout-section .column .block.ucb-overlay-dark {
@@ -113,11 +130,11 @@
   margin: .5em
 }
 
-.ucb-hero-outer-wrapper {
+/* .ucb-hero-outer-wrapper {
   --bs-gutter-x: 1.5rem;
   padding-right: calc(var(--bs-gutter-x) * .5);
   padding-left: calc(var(--bs-gutter-x) * .5);
-}
+} */
 
 .ucb-hero-unit-video {
   aspect-ratio: 16 / 9;
@@ -147,6 +164,11 @@
 .ucb-hero-unit-video-player-wrapper iframe {
   width: 100%;
   height: 100%;
+}
+
+.ucb-post-wide-title-region .block-hero-unit .block:first-child, .ucb-below-post-wide-region .block-hero-unit .block:first-child {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .ucb-boostrap-layout-section .column .block-hero-unit .block:first-child {
