--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -181,7 +181,7 @@
       {# link is in html.html.twig #}
       <div class="layout-content">
         {% if page.post_wide_title|render %}
-          <div class="ucb-post-wide-title-region">
+          <div class="ucb-post-wide-title-region edge-to-edge row g-0">
             {{ page.post_wide_title }}
           </div>
         {% endif %}
@@ -222,7 +222,7 @@
         {% endif %}
 
         {% if page.wide_post|render %}
-          <div class="ucb-below-content-region">
+          <div class="ucb-below-post-wide-region edge-to-edge row g-0">
             {{ page.wide_post }}
           </div>
         {% endif %}
