--- a/templates/field/field--node--body--basic-page.html.twig
+++ b/templates/field/field--node--body--basic-page.html.twig
@@ -5,7 +5,7 @@
  */
 #}
 
-<div class="container bs-background-unstyled">
+<div class="container bs-background-unstyled block">
     {% for item in items %}
         {{ item.content|render }}
     {% endfor %}
