CuBoulder/tiamat-theme#1021 Replaces `sr-only` with `visually-hidden`

--- a/templates/content/node--basic-page.html.twig
+++ b/templates/content/node--basic-page.html.twig
@@ -79,7 +79,7 @@
 ] %}
 
 <article{{ attributes.addClass(classes) }}>
-  <h1 class="sr-only">
+  <h1 class="visually-hidden">
     {{ label }}
   </h1>
   {% if content %}
