--- a/templates/content/node--ucb-article-list.html.twig
+++ b/templates/content/node--ucb-article-list.html.twig
@@ -260,7 +260,7 @@
 
 {# JSON API Filter logic #}
 <article{{ attributes.addClass('container', 'ucb-content-wrapper') }}>
-  <h1{{ title_attributes.addClass('ucb-article-list-header', is_front ? 'sr-only') }}>
+  <h1{{ title_attributes.addClass('ucb-article-list-header', is_front ? 'visually-hidden') }}>
     {{ label }}
   </h1>
 
