--- a/templates/content/node--ucb-class-notes-list-page.html.twig
+++ b/templates/content/node--ucb-class-notes-list-page.html.twig
@@ -23,7 +23,7 @@
  
 <article{{ attributes.addClass(classes) }}>
   <div class="ucb-class-notes-list-title">
-    <h1{{ title_attributes.addClass(is_front ? 'sr-only') }}>
+    <h1{{ title_attributes.addClass(is_front ? 'visually-hidden') }}>
       {{ label }}
     </h1>
   </div>
