--- a/templates/content/node--ucb-class-notes.html.twig
+++ b/templates/content/node--ucb-class-notes.html.twig
@@ -8,7 +8,7 @@
   
  
 <article{{ attributes.addClass(classes) }}>
-  <h1{{ title_attributes.addClass(is_front ? 'sr-only') }}>
+  <h1{{ title_attributes.addClass(is_front ? 'visually-hidden') }}>
     {{ label }}
   </h1>
   {% if content %}
