--- a/templates/content/node--ucb-faq-page.html.twig
+++ b/templates/content/node--ucb-faq-page.html.twig
@@ -14,7 +14,7 @@
 
   <div{{ attributes.addClass(classes) }}>
     <div class="ucb-faq-title">
-      <h1{{ title_attributes.addClass(is_front ? 'sr-only') }}>
+      <h1{{ title_attributes.addClass(is_front ? 'visually-hidden') }}>
         {{ label }}
       </h1>
     </div>
