--- a/templates/content/node--ucb-issue-archive.html.twig
+++ b/templates/content/node--ucb-issue-archive.html.twig
@@ -13,7 +13,7 @@
 
 <div{{ attributes.addClass(classes) }}>
   <div class="ucb-issue-archive-title">
-    <h1{{ title_attributes.addClass(is_front ? 'sr-only') }}>
+    <h1{{ title_attributes.addClass(is_front ? 'visually-hidden') }}>
       {{ label }}
     </h1>
   </div>
