--- a/templates/field/field--field-ucb-article-categories.html.twig
+++ b/templates/field/field--field-ucb-article-categories.html.twig
@@ -8,7 +8,7 @@
 {% set items = items|filter(item => item.content['#options'].entity.field_ucb_category_display.value == '1') %}
 {% if items %}
   <div role="contentinfo" class="container ucb-article-categories" itemprop="about">
-    <span class="sr-only">Categories:</span>
+    <span class="visually-hidden">Categories:</span>
     <div class="ucb-article-category-icon" aria-hidden="true">
       <i class="fa-solid fa-folder-open"></i>
     </div>
