--- a/templates/content/node--ucb-issue.html.twig
+++ b/templates/content/node--ucb-issue.html.twig
@@ -12,7 +12,7 @@
 <div {{attributes.addClass(classes)}}>
   <div class="row">
     <header role="banner" class="ucb-article-banner">
-      <h1{{ title_attributes.addClass(is_front ? 'sr-only') }}>
+      <h1{{ title_attributes.addClass(is_front ? 'visually-hidden') }}>
         {{ label }}
       </h1>
     </header>
