--- a/templates/content/node--ucb-people-list-page.html.twig
+++ b/templates/content/node--ucb-people-list-page.html.twig
@@ -66,7 +66,7 @@
 } %}
 <article{{ attributes.addClass(classes) }}>
   <div class="ucb-people-list-title">
-    <h1{{ title_attributes.addClass(is_front ? 'sr-only') }}>
+    <h1{{ title_attributes.addClass(is_front ? 'visually-hidden') }}>
       {{ label }}
     </h1>
   </div>
