--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -41,11 +41,11 @@
           {% if item.title|upper == 'HOME' %}
             <a{{ create_attribute({ href: item.url|render, class: 'ucb-home-button nav-link', title: item.title }) }}>
               <i class="fa-solid fa-home"></i>
-              <span class="sr-only">{{ item.title }}</span>
+              <span class="visually-hidden">{{ item.title }}</span>
             </a>
           {% else %}
             {% set title = item.is_unpublished ? {
-                '#markup': '<i class="fa-solid fa-eye-slash"></i> ' ~ item.title|e ~ ' <span class="sr-only">(Unpublished)</span>'
+                '#markup': '<i class="fa-solid fa-eye-slash"></i> ' ~ item.title|e ~ ' <span class="visually-hidden">(Unpublished)</span>'
               } : item.title %}
             {{ link(title, item.url, create_attribute({ class: 'nav-link' })) }}
             {% if item.below %}
