wip: Google translate

--- a/css/ucb-brand-bar.css
+++ b/css/ucb-brand-bar.css
@@ -58,3 +58,11 @@
   width: 20px;
   height: 20px;
 }
+/* Google Translate */
+div.skiptranslate iframe{
+  visibility: collapse !important;
+}
+
+#google_translate_element2{
+  display: none;
+}
