Prevents translation of Language Select menu

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -122,7 +122,7 @@
               <div class="ucb-lang-icon">
                 <i class="fa-solid fa-language"></i>
               </div>
-              <select class="ucb-lang-select" onchange="doGTranslate(this);">
+              <select class="ucb-lang-select notranslate" onchange="doGTranslate(this);">
                 <option class="ucb-lang-option" value="">Translate</option>
                 <option class="ucb-lang-option" value="en|en">English</option>
                 <option class="ucb-lang-option" value="en|es">Spanish</option>
