--- a/templates/block/block--ucb-article-slider.html.twig
+++ b/templates/block/block--ucb-article-slider.html.twig
@@ -26,6 +26,9 @@
     ~ '&filter[publish-check][condition][memberOf]=published'
   %}
 
+{# Base Url #}
+{% set baseurlJSON = url('<front>')|render|trim('/') %}
+
 {# include and exclude options set by the user #}
 {% set includeCategories = [] %}
 {% set myCategories =
@@ -196,7 +199,7 @@
 	{{ title_suffix }}
 	{{ content.body }}
 	{# Article Slider Main Block#}
-	<article-slider-block jsonapi="{{ articlesJSON }}{{ IncludeFilter }}{{ pageCountFilter }}{{ sortFilter }}" excats="{{ excludeCategories }}" extags="{{ excludeTags }}">
+	<article-slider-block base-uri="{{baseurlJSON}}" jsonapi="{{ articlesJSON }}{{ IncludeFilter }}{{ pageCountFilter }}{{ sortFilter }}" excats="{{ excludeCategories }}" extags="{{ excludeTags }}">
 		<div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
 			<i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
 		</div>
