--- a/templates/block/block--ucb-current-issue-block.html.twig
+++ b/templates/block/block--ucb-current-issue-block.html.twig
@@ -10,6 +10,8 @@
     view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
 ]
 %}
+{# Base Url #}
+{% set baseurlJSON = url('<front>')|render|trim('/') %}
 
 {# Block/Title/Icon Styles #}
 {% set blockStyles = [
@@ -41,7 +43,7 @@
 		</div>
 	{% endif %}
 	{{ title_suffix }}
-	<current-issue-block>
+	<current-issue-block base-uri="{{baseurlJSON}}">
 		<div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
 			<i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
 		</div>
